--- a/ClientApp-dev.yml
+++ b/ClientApp-dev.yml
@@ -1,1 +1,1 @@
-msg: This is from config file that is from client REMOTE DEV i made a change here.
+msg: This is from config file that is from client REMOTE DEV i made a change here. another change
